Fix Footer Alignment

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -57,10 +57,10 @@
 .footer-link-items {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     margin: 16px;
     text-align: left;
-    width: 160px;
+    width: 200px;
     box-sizing: border-box;
 }
 
@@ -121,7 +121,6 @@
 .social-logo {
     color: #edf2f4;
     justify-self: start;
-    margin-left: 20px;
     cursor: pointer;
     text-decoration: none;
     font-size: 2rem;
